# chip8

./: Cargo.toml  README
src/: bit_utils.rs  emulator.rs  instance.rs  instruction_format.rs  lib.rs  main.rs  renderer.rs  screen.rs  shader.wgsl  stack.rs  state.rs  timer.rs  vertex.rs  window.rs
src/emulator/: mod.rs
src/function/: mod.rs
src/keyboard/: mod.rs
src/stack/: mod.rs
src/window/: mod.rs
