[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.4.0"
bytemuck = { version = "1.12", features = ["derive"] }
cgmath = "0.18"
crossterm = "0.26.1"
env_logger = "0.10.0"
image = "0.24.6"
num-traits = "0.2"
pollster = "0.3.0"
rand = "0.8.5"
rodio = "0.17.1"
spin_sleep = "1.1.1"
tokio = { version = "1", features = ["full"] }
wgpu = "0.16.0"
winit = "0.28.5"
